# CMakeTrain

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  generic.cmake
include/: module.h  module2.h
src/: main.c  module.c  module2.c
